2010-07-20  Vadim Kurland  <vadim@vk.crocodile.org>

	* set version to 4.1.0 and version of the data file format to
	"17". Data files need to be upgraded. Upgrade script changes the
	version and makes sure Standard objects library is read-only. Some
	users may have this library configured read-write in their data
	files because of a bug in the early versions of fwbuilder 4.

2010-07-19 Roman Bovsunivskiy <a2k0001@gmail.com>

	* DiscoveryDruid_q.ui, newclusterdialog_q.ui, newfirewalldialog_q.ui:
	  Set up default buttons in dialogs

	* DiscoveryDruid_q.ui, DiscoveryDruid.cpp, Importer.cpp: Added firewall
	name input field.

	* InterfaceEditorWidget.cpp: Button "Add address" now changes text
	to "Add anoter address" when there is at least one address in current 
	interface.

2010-07-19  Vadim Kurland  <vadim@vk.crocodile.org>

	* objects_init.xml.in: fixed bug #3031721 "Qt has caught an
	exception thrown from an event handler." The "Standard" objects
	library was made read-write in one of the earlier builds

2010-07-17  Vadim Kurland  <vadim@vk.crocodile.org>

	* DiscoveryDruid.cpp (DiscoveryDruid::DiscoveryDruid): fixed #1597
	import method "import configuration of a firewall" is disabled on
	the first page of the discovery druid

2010-07-15  Vadim Kurland  <vadim@vk.crocodile.org>

	* newFirewallDialog_from_template.cpp (newFirewallDialog::replaceReferencesToNetworks):
	fixed #1582 'tree is not refreshed after address substitutions in
	"new firewall" wizard'

2010-07-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* FirewallInstaller.cpp (FirewallInstaller::packSCPArgs): 
	fixed #1571 "Installer does not work if firewall object name
	contains spaces". Installer should use escaping to make sure
	file name with a space is correctly interpreted by the script
	it runs on the firewall.

	* DiscoveryDruid.cpp (DiscoveryDruid::loadDataFromImporter):
	fixed #1544 "fwbuilder crashes during import of file with rtf